Complete, is ready to deploy